// DataTypes.proto
syntax = "proto3";
package satisgraphtory;

// Just here to look pretty
import public "Generated.proto";

message ResourcePacket {
    Item item = 1;
    int32 itemQuantity = 2;
}

message ItemData {
    Item id = 1;
    string name = 2;
    string icon = 3;
    bool hidden = 4;
}

message RecipeData {
    Recipe id = 1;
    string name = 2;
    repeated ResourcePacket input = 3;
    MachineClass machineClass = 4;
    repeated ResourcePacket output = 5;
    bool hidden = 6;
    bool alt = 7;
    double time = 8;
}

message PlayerUnlockData {
    Recipe id = 1;
    string name = 2;
    bool hidden = 3;
}

message MachineClassData {
    MachineClass id = 1;
    string name = 2;
    UpgradeTiers tier = 3;
    string icon = 4;
    int32 inputs = 5;
    int32 outputs = 6;
    double power = 7;
    double speed = 8;
    bool hidden = 9;
    int32 localOrdering = 10;
}

message ItemList {
    repeated ItemData data = 1;
}

message RecipeList {
    repeated RecipeData data = 1;
}

message PlayerUnlockList {
    repeated PlayerUnlockData data = 1;
}

message MachineClassList {
    repeated MachineClassData data = 1;
}

message Node {
    int32 id = 1;
    int32 fx = 2;
    int32 fy = 3;
    MachineClass machineClass = 4;
    UpgradeTiers tier = 5;
    int32 overclock = 6;
    Recipe recipe = 7;
    bool hasRecipe = 8;
}

message Edge {
    int32 id = 1;
    int32 sourceNodeId = 2;
    int32 targetNodeId = 3;
    int32 sourceIndex = 4;
    int32 targetIndex = 5;
    UpgradeTiers tier = 6;
}

message SaveFile {
    repeated Edge edges = 1;
    repeated Node nodes = 2;
}