syntax = "proto3";

package satisgraphtory;

enum UpgradeTiers {

    mk1 = 0;
    mk2 = 1;
    mk3 = 2;
    mk4 = 3;
    mk5 = 4;
    mk6 = 5;
    mk7 = 6;
    mk8 = 7;
    mk9 = 8;
    mk10 = 9;
    mk11 = 10;
    mk12 = 11;
    mk13 = 12;
    mk14 = 13;
    mk15 = 14;
    mk16 = 15;
    unset = 16;
    na = 17;
}

enum Recipe {

    quickwire_cable = 0;
    alternate_encased_industrial_beam = 1;
    alternate_quickwire = 2;
    alternate_modular_frame = 3;
    alternate_heat_sink = 4;
    alternate_electromagnetic_control_rod = 5;
    alternate_turbo_motor = 6;
    alternate_black_powder = 7;
    alternate_stator = 8;
    alternate_silica = 9;
    alternate_highspeed_connector = 10;
    alternate_concrete = 11;
    alternate_compacted_coal = 12;
    alternate_cable = 13;
    iron_wire = 14;
    alternate_beacon = 15;
    wood_coal = 16;
    alternate_reinforced_iron_plate = 17;
    quickwire_circuit_board = 18;
    enriched_steel_ingot = 19;
    alternate_circuit_board = 20;
    alternate_screw = 21;
    biomass_coal = 22;
    alternate_steel_ingot = 23;
    alternate_crystal_oscillator = 24;
    crystal_computer = 25;
    alternate_heavy_modular_frame = 26;
    alternate_plastic = 27;
    alternate_motor = 28;
    stitched_iron_plate = 29;
    caterium_wire = 30;
    iron_ingot_alloy = 31;
    alternate_rotor = 32;
    steel_screw = 33;
    alternate_uranium_cell = 34;
    alternate_computer = 35;
    alternate_nobelisk = 36;
    alternate_radio_control_unit = 37;
    alternate_nuclear_fuel_rod = 38;
    alternate_turbofuel = 39;
    radio_control_unit = 40;
    modular_frame = 41;
    spiked_rebar = 42;
    supercomputer = 43;
    iodine_infused_filter = 44;
    caterium_ingot = 45;
    rotor = 46;
    iron_plate = 47;
    screw = 48;
    electromagnetic_control_rod = 49;
    rubber = 50;
    aluminum_ingot = 51;
    plastic = 52;
    biomass_alien_organs = 53;
    biofuel = 54;
    sam_fluctuator = 55;
    crystal_oscillator = 56;
    stator = 57;
    highspeed_connector = 58;
    concrete = 59;
    power_shard_1 = 60;
    black_powder = 61;
    color_cartridge = 62;
    sam_ingot = 63;
    ai_limiter = 64;
    alclad_aluminum_sheet = 65;
    biomass_wood = 66;
    cable = 67;
    biomass_alien_carapace = 68;
    quantum_crystal = 69;
    circuit_board = 70;
    power_shard_2 = 71;
    biomass_mycelia = 72;
    silica = 73;
    nobelisk = 74;
    beacon = 75;
    reinforced_iron_plate = 76;
    copper_ingot = 77;
    cartridge = 78;
    quickwire = 79;
    computer = 80;
    encased_industrial_beam = 81;
    steel_ingot = 82;
    motor = 83;
    steel_pipe = 84;
    filter = 85;
    iron_rod = 86;
    battery = 87;
    superposition_oscillator = 88;
    steel_beam = 89;
    nuclear_fuel_rod = 90;
    wire = 91;
    iron_ingot = 92;
    uranium_cell = 93;
    biomass_leaves = 94;
    fabric = 95;
    quartz_crystal = 96;
    power_shard_5 = 97;
    turbo_motor = 98;
    heat_sink = 99;
    quantum_computer = 100;
    fuel = 101;
    heavy_modular_frame = 102;
    impure_bauxite_node = 103;
    normal_bauxite_node = 104;
    pure_bauxite_node = 105;
    impure_caterium_ore_node = 106;
    normal_caterium_ore_node = 107;
    pure_caterium_ore_node = 108;
    impure_coal_node = 109;
    normal_coal_node = 110;
    pure_coal_node = 111;
    impure_copper_ore_node = 112;
    normal_copper_ore_node = 113;
    pure_copper_ore_node = 114;
    impure_crude_oil_node = 115;
    normal_crude_oil_node = 116;
    pure_crude_oil_node = 117;
    impure_iron_ore_node = 118;
    normal_iron_ore_node = 119;
    pure_iron_ore_node = 120;
    impure_limestone_node = 121;
    normal_limestone_node = 122;
    pure_limestone_node = 123;
    impure_raw_quartz_node = 124;
    normal_raw_quartz_node = 125;
    pure_raw_quartz_node = 126;
    impure_sam_ore_node = 127;
    normal_sam_ore_node = 128;
    pure_sam_ore_node = 129;
    impure_sulfur_node = 130;
    normal_sulfur_node = 131;
    pure_sulfur_node = 132;
    impure_uranium_node = 133;
    normal_uranium_node = 134;
    pure_uranium_node = 135;
}

enum MachineClass {

    assembler = 0;
    biomass_burner = 1;
    coal_generator = 2;
    constructor = 3;
    converter = 4;
    foundry = 5;
    fuel_generator = 6;
    geo_thermal_generator = 7;
    hadron_collider = 8;
    industrial_storage_container = 9;
    manufacturer = 10;
    miner = 11;
    nuclear_power_plant = 12;
    oil_pump = 13;
    oil_refinery = 14;
    quantum_encoder = 15;
    remote_storage = 16;
    smelter = 17;
    storage_container = 18;
    splitter = 19;
    merger = 20;
    smart_splitter = 21;
}

enum Item {

    ai_limiter = 0;
    alclad_aluminum_sheet = 1;
    alien_carapace = 2;
    alien_organs = 3;
    aluminum_ingot = 4;
    bacon_agaric = 5;
    battery = 6;
    bauxite = 7;
    beacon = 8;
    biofuel = 9;
    biomass = 10;
    black_powder = 11;
    blade_runners = 12;
    cable = 13;
    cartridge = 14;
    caterium_ingot = 15;
    caterium_ore = 16;
    chainsaw = 17;
    circuit_board = 18;
    coal = 19;
    color_cartridge = 20;
    color_gun = 21;
    compacted_coal = 22;
    computer = 23;
    concrete = 24;
    copper_ingot = 25;
    copper_ore = 26;
    crude_oil = 27;
    crystal_oscillator = 28;
    dark_matter = 29;
    electromagnetic_control_rod = 30;
    encased_industrial_beam = 31;
    fabric = 32;
    filter = 33;
    flower_petals = 34;
    fuel = 35;
    gas_mask = 36;
    green_power_slug = 37;
    gunpowder = 38;
    hazmat_filter = 39;
    hazmat_suit = 40;
    heat_sink = 41;
    heavy_modular_frame = 42;
    highspeed_connector = 43;
    iodine_infused_filter = 44;
    iron_ingot = 45;
    iron_ore = 46;
    iron_plate = 47;
    iron_rod = 48;
    jetpack = 49;
    leaves = 50;
    limestone = 51;
    machinegun = 52;
    medicinal_inhaler = 53;
    modular_frame = 54;
    motor = 55;
    mycelia = 56;
    nobelisk = 57;
    nobelisk_detonator = 58;
    nuclear_fuel_rod = 59;
    object_scanner = 60;
    parachute = 61;
    plastic = 62;
    portable_miner = 63;
    power_shard = 64;
    purple_power_slug = 65;
    quantum_computer = 66;
    quantum_crystal = 67;
    quartz_crystal = 68;
    quickwire = 69;
    quickwire_computer = 70;
    radio_control_unit = 71;
    raw_quartz = 72;
    rebar_gun = 73;
    rebar_scatter_gun = 74;
    reinforced_iron_plate = 75;
    rifle = 76;
    rifle_mk2 = 77;
    rotor = 78;
    rubber = 79;
    sam_fluctuator = 81;
    sam_ingot = 82;
    sam_ore = 83;
    screw = 84;
    silica = 85;
    spiked_rebar = 86;
    stator = 87;
    steel_beam = 88;
    steel_ingot = 89;
    steel_pipe = 90;
    sulfur = 91;
    supercomputer = 92;
    superposition_oscillator = 93;
    turbo_motor = 94;
    turbofuel = 95;
    uranium = 96;
    uranium_cell = 97;
    wire = 98;
    wood = 99;
    xenobasher = 100;
    xenozapper = 101;
    yellow_power_slug = 102;
}